--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,3 @@
+v0.1.8, 11/09/2013 -- File storage for tokens added.
 v0.1.7, 10/09/2013 -- direct card added.
 v0.1.5, 02/09/2013 -- Initial release.
