--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
+v0.2.0, 13/09/2013 -- change portalocker library to filelock (PyWin32 is not required on Windows from this revision)
 v0.1.9, 12/09/2013 -- File storage locking with portalocker
 v0.1.8, 11/09/2013 -- File storage for tokens added.
 v0.1.7, 10/09/2013 -- direct card added.
